// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`Storybook Decorator tests on web should render a Bar Spacing Decorator 1`] = `
<div
  style={
    Object {
      "marginTop": "20px",
    }
  }
>
  <div
    dir="auto"
  >
    I am in Storybook!
  </div>
</div>
`;

exports[`Storybook Decorator tests on web should render a Centered Decorator 1`] = `
<div>
  <div
    dir="auto"
  >
    I am in Storybook!
  </div>
</div>
`;

exports[`Storybook Decorator tests on web should render a Lateral Spacing Decorator 1`] = `
<div
  style={
    Object {
      "marginLeft": "20px",
      "marginRight": "20px",
    }
  }
>
  <div
    dir="auto"
  >
    I am in Storybook!
  </div>
</div>
`;

exports[`Storybook Decorator tests on web should render a White Background Decorator 1`] = `
<div
  style={
    Object {
      "backgroundColor": "white",
    }
  }
>
  <div
    dir="auto"
  >
    I am in Storybook!
  </div>
</div>
`;
